-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======

0.5.4p2
=======

- sql
    - Repaired the printing of SQL exceptions which are not 
      based on parameters.

0.5.4p1
=======

- orm
    - Fixed an attribute error introduced in 0.5.4 which would 
      occur when merge() was used with an incomplete object.
    
0.5.4
=====

- orm
    - Significant performance enhancements regarding Sessions/flush()
      in conjunction with large mapper graphs, large numbers of 
      objects:
      
      - Removed all* O(N) scanning behavior from the flush() process,
        i.e. operations that were scanning the full session, 
        including an extremely expensive one that was erroneously
        assuming primary key values were changing when this 
        was not the case.
        
        * one edge case remains which may invoke a full scan,
          if an existing primary key attribute is modified
          to a new value.
      
      - The Session's "weak referencing" behavior is now *full* -
        no strong references whatsoever are made to a mapped object
        or related items/collections in its __dict__.  Backrefs and 
        other cycles in objects no longer affect the Session's ability 
        to lose all references to unmodified objects.  Objects with 
        pending changes still are maintained strongly until flush.  
        [ticket:1398]
        
        The implementation also improves performance by moving
        the "resurrection" process of garbage collected items
        to only be relevant for mappings that map "mutable" 
        attributes (i.e. PickleType, composite attrs).  This removes
        overhead from the gc process and simplifies internal 
        behavior.
        
        If a "mutable" attribute change is the sole change on an object 
        which is then dereferenced, the mapper will not have access to 
        other attribute state when the UPDATE is issued.  This may present 